--- a/App1.1/.project
+++ b/App1.1/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>App1.1</name>
+	<name>App_1_1_Grupo_7_2025</name>
 	<comment></comment>
 	<projects>
 	</projects>
