--- a/App1.1/Debug/makefile
+++ b/App1.1/Debug/makefile
@@ -34,34 +34,34 @@ $(wildcard ../makefile.init) \
 $(wildcard ../makefile.targets) \
 
 
-BUILD_ARTIFACT_NAME := App1.1
+BUILD_ARTIFACT_NAME := App_1_1_Grupo_7_2025
 BUILD_ARTIFACT_EXTENSION := elf
 BUILD_ARTIFACT_PREFIX :=
 BUILD_ARTIFACT := $(BUILD_ARTIFACT_PREFIX)$(BUILD_ARTIFACT_NAME)$(if $(BUILD_ARTIFACT_EXTENSION),.$(BUILD_ARTIFACT_EXTENSION),)
 
 # Add inputs and outputs from these tool invocations to the build variables 
 EXECUTABLES += \
-App1.1.elf \
+App_1_1_Grupo_7_2025.elf \
 
 MAP_FILES += \
-App1.1.map \
+App_1_1_Grupo_7_2025.map \
 
 SIZE_OUTPUT += \
 default.size.stdout \
 
 OBJDUMP_LIST += \
-App1.1.list \
+App_1_1_Grupo_7_2025.list \
 
 
 # All Target
 all: main-build
 
 # Main-build Target
-main-build: App1.1.elf secondary-outputs
+main-build: App_1_1_Grupo_7_2025.elf secondary-outputs
 
 # Tool invocations
-App1.1.elf App1.1.map: $(OBJS) $(USER_OBJS) /home/carlitoz/Documentos/Proyectos-STM32/Grupo_7_TDII_2025/App1.1/STM32F439ZITX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "App1.1.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"/home/carlitoz/Documentos/Proyectos-STM32/Grupo_7_TDII_2025/App1.1/STM32F439ZITX_FLASH.ld" --specs=nosys.specs -Wl,-Map="App1.1.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+App_1_1_Grupo_7_2025.elf App_1_1_Grupo_7_2025.map: $(OBJS) $(USER_OBJS) /home/carlitoz/Documentos/Proyectos-STM32/Grupo_7_TDII_2025/App1.1/STM32F439ZITX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "App_1_1_Grupo_7_2025.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"/home/carlitoz/Documentos/Proyectos-STM32/Grupo_7_TDII_2025/App1.1/STM32F439ZITX_FLASH.ld" --specs=nosys.specs -Wl,-Map="App_1_1_Grupo_7_2025.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
@@ -70,14 +70,14 @@ default.size.stdout: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
 	@echo 'Finished building: $@'
 	@echo ' '
 
-App1.1.list: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "App1.1.list"
+App_1_1_Grupo_7_2025.list: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "App_1_1_Grupo_7_2025.list"
 	@echo 'Finished building: $@'
 	@echo ' '
 
 # Other Targets
 clean:
-	-$(RM) App1.1.elf App1.1.list App1.1.map default.size.stdout
+	-$(RM) App_1_1_Grupo_7_2025.elf App_1_1_Grupo_7_2025.list App_1_1_Grupo_7_2025.map default.size.stdout
 	-@echo ' '
 
 secondary-outputs: $(SIZE_OUTPUT) $(OBJDUMP_LIST)
